<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/scrollviewid"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ffffff">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        tools:context="com.example.ismail.discreteproblems.ComAlgo">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/comalgo"
            />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/comalgograph"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:paddingLeft="32dp"
            android:textColor="#000"
            android:background="#ffffff"
            android:text="The growth of combinations of functions"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="20dp"
            android:textStyle="normal"
            android:textColor="#000"
            android:background="#ffffff"
            android:text="@string/catext1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="20dp"
            android:textStyle="normal"
            android:textColor="#000"
            android:background="#ffffff"
            android:text="@string/catext2"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:textStyle="normal"
            android:textColor="#000"
            android:background="#ffffff"
            android:text="@string/catext3"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="normal"
            android:paddingLeft="20dp"
            android:textColor="#000"
            android:background="#ffffff"
            android:text="@string/catext4"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="normal"
            android:paddingLeft="20dp"
            android:textColor="#000"
            android:background="#ffffff"
            android:text="@string/catext5"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="normal"
            android:paddingLeft="20dp"
            android:textColor="#000"
            android:background="#ffffff"
            android:text="@string/catext6"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:textStyle="normal"
            android:textColor="#000"
            android:background="#ffffff"
            android:text="@string/catext7"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingLeft="20dp"
            android:textStyle="normal"
            android:textColor="#000"
            android:background="#ffffff"
            android:text="@string/catext8"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="normal"
            android:paddingLeft="20dp"
            android:textColor="#000"
            android:background="#ffffff"
            android:text="@string/catext9"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="normal"
            android:paddingLeft="20dp"
            android:textColor="#000"
            android:background="#ffffff"
            android:text="@string/catext10"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="normal"
            android:paddingLeft="20dp"
            android:textColor="#000"
            android:background="#ffffff"
            android:text="@string/catext11"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="20dp"
            android:textStyle="normal"
            android:textColor="#000"
            android:background="#ffffff"
            android:text="@string/catext12"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="20dp"
            android:textStyle="normal"
            android:textColor="#000"
            android:background="#ffffff"
            android:text="@string/catext13"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:paddingBottom="20dp"
            android:textSize="20sp"
            android:textStyle="normal"
            android:textColor="#000"
            android:background="#ffffff"
            android:text="@string/catext14"
            />


    </LinearLayout>
</ScrollView>
