<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/scrollviewid"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    android:paddingBottom="20dp"
    tools:context="com.example.ismail.discreteproblems.DomainCoDomain">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/funcfig"
        android:paddingTop="16dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="normal"
        android:padding="20dp"
        android:textColor="#000"
        android:background="#ffffff"
        android:text="@string/dctext1"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:src="@drawable/domaincodomain"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="20dp"
        android:textStyle="normal"
        android:textColor="#000"
        android:background="#ffffff"
        android:text="@string/dctext2"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="20dp"
        android:textStyle="normal"
        android:textColor="#000"
        android:background="#ffffff"
        android:text="@string/dctext3"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="20dp"
        android:textStyle="normal"
        android:textColor="#000"
        android:background="#ffffff"
        android:text="@string/dctext4"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:paddingBottom="20dp"
        android:textSize="20sp"
        android:textStyle="normal"
        android:textColor="#000"
        android:background="#ffffff"
        android:text="@string/dctext5"
        />


</LinearLayout>
</ScrollView>
